--- a/adminpro/src/app/pages/graficas1/graficas1.component.html
+++ b/adminpro/src/app/pages/graficas1/graficas1.component.html
@@ -1,3 +1,11 @@
-<p>
-  graficas1 works!
-</p>
+<div class="row">
+
+  <div *ngFor="let grafico of graficos" class="col-6">
+    <div class="card">
+      <div class="card-body">
+        <app-grafico-dona [grafico]="grafico"></app-grafico-dona>
+      </div>
+    </div>
+  </div>
+
+</div>
